# ai-powered-plant-disease-detection

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/: Dockerfile  requirements.txt
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/models/: prediction.py
backend/app/utils/: disease_info.py  image_processing.py
frontend/: Dockerfile  app.py  requirements.txt
frontend/.streamlit/: secrets.toml
frontend/assests/: styles.css
frontend/pages/: about.py  batch_analysis.py  home.py
frontend/utils/: api_client.py  ui_components.py
model_training/: data_preprocessing.py  model_evaluation.py  train_model.py
model_training/outputs/: classification_report.json  evaluation_metrics.json  model_config.json  model_summary.txt
scripts/: download_model.py  setup.py  test_installation.py
