[project]
name = "ai-powered-plant-disease-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles==23.2.1",
    "black==23.11.0",
    "fastapi==0.100.1",
    "flake8==6.1.0",
    "httpx==0.25.2",
    "matplotlib==3.7.2",
    "numpy==1.23.5",
    "opencv-python==4.8.1.78",
    "pandas==2.0.3",
    "passlib[bcrypt]==1.7.4",
    "pillow==10.1.0",
    "plotly==5.17.0",
    "pydantic==1.10.12",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "python-dotenv==1.0.0",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.6",
    "requests==2.31.0",
    "scikit-learn==1.3.0",
    "seaborn==0.12.2",
    "streamlit==1.28.1",
    "streamlit-camera-input-live==0.2.0",
    "tensorflow==2.12.0",
    "tensorflow-io-gcs-filesystem==0.31.0",
    "typing-extensions==4.5.0",
    "uvicorn[standard]==0.23.2",
]
